removed tar from upload

--- a/build.gradle
+++ b/build.gradle
@@ -48,5 +48,8 @@ uploadArchives {
 }
 
 [distTar].each { task ->
+  configurations.archives.artifacts.removeAll {
+    it.class.simpleName == "ArchivePublishArtifact" && it.archiveTask == task
+  }
   task.enabled = false
 }
